--- a/未命名.md
+++ b/未命名.md
@@ -86,136 +86,11 @@ $q^{-1} = \frac{1}{a^2+b^2+c^2+d^2}(a-bi-cj-dk)$
 
 --------------
 
+匀速圆周运动，培养直觉
 
 
-So it's equal to v zero times square root of 2h over g. It is equal to fifty-five point zero meters times the square root of 2 times 500 meters divided by 9.78 meters per second squared.
 
-I now want to give you two rules. First, do not substitute, do not use numbers until the end. Do not use numbers until the end. 
-
-This is a trick. The deal is check the dimension. What is check the dimension? First, look at this. 
-
-There is a meter here. This meter is eliminated. This second squared is at the bottom of the molecule, so it becomes second squared. 
-
-Second squared is at the beginning. Oh, I got this wrong. This is fifty-five point zero meters per second. 
-
-Second squared is at the bottom of the molecule, so it becomes a meter. So it's right. If you get to this point, it's easy to check. 
-
-If this check is wrong, then your formula is a little wrong. If you use these two, it's easy to calculate. Does everybody understand the two rules that I mentioned? Especially during examination, you are under pressure. 
-
-Do not put in the numbers until the very end. If you put in numbers, you are likely to make mistakes, and then the mistakes would compound itself so that eventually you would have a paper which is very messy and wrong. Next, we'll talk about the circular motion, uniform circular motion.
-
-I was in a boarding school in Tsinghua Park. The school is still there, but now it's a union or something. It's on the west side of the second school gate. 
-
-Then I finished elementary school there and went to Chongde Middle School. It's in the city. Now it's Rongxiang Hutong No. 
-
-21. I studied there for four years. I finished my first year of high school and then the war began. 
-
-In my second year of high school, I went to two schools, first in Hefei and then in Kunming. So I didn't study physics in high school. I studied a little bit of physics in junior high school, but I didn't discuss uniform circular motion.
-
-In my second year of high school, I didn't study physics in junior high school. Then in the summer of 1938, I finished my second year of high school. The Ministry of Education said that there were too many middle school students, so they didn't want to study in uniform circular motion. 
-
-So I decided to take the college entrance exam. In the entrance exam, there was always physics, so I had to study physics myself. So I studied physics for a month. 
-
-In this month, I found a textbook. I don't remember what kind of textbook it was. I studied it for a month and took the exam. 
-
-This month had a decisive impact on my life. Why? Because when I applied for the college entrance exam, I was transferred to the Department of Chemistry. I found that physics was very interesting, so I decided to study physics. 
-
-So as soon as I entered the college, I immediately transferred from the Department of Chemistry to the Department of Physics. Why do I think physics is very interesting? I still remember very clearly which concept made me change my mind about physics. It was the concept of uniform circular motion.
-
-I used to have an intuition. I think you all have an intuition. Intuition.
-
-When it comes to uniform circular motion, the most important thing is the tangent vector. I think a child would have this kind of intuition. But the book told me that the acceleration is not in that direction. 
-
-It is perpendicular to it. Its velocity is like this. Its acceleration is like this. 
-
-I found this very strange at the beginning. But when I understood it, I realized that if you sit in a car and the car is turning, the pressure you are under is perpendicular. So physics theory actually matches your experience.
-
-I thought this was very interesting, so I changed my mind about physics. After thinking about this, I came to a conclusion. This conclusion is very important for you to study anything, especially physics. 
-
-A person has all kinds of intuitions at any time. When you are young, you have an intuition to survive. Even a dog knows that the straight line is the shortest distance.
-
-This is an intuition. So we have some intuitions. If you want to survive, you must have an intuition.
-
-When you are learning something, sometimes the result is different from your intuition. I found that the acceleration is not in that direction. It is perpendicular to it.
-
-When I first saw this, I thought it was different from my intuition. In this case, it is the most important thing to learn. You have to think about it clearly. 
-
-You can't give up. If you think about it very clearly, you will change your intuition. Then you will have a more correct intuition.
-
-In other words, you have to want to turn your new knowledge into your increased intuition at any time. This increased intuition is very important. A lot of my research work is about symmetry.
-
-Symmetry is a very complicated concept. You have a mathematical formula. This is not enough.
-
-You have to turn that mathematical formula into your intuition. The first time I learned about this was when I went to the United States to study at Chicago University. I learned from Taylor.
-
-Taylor later became very famous because he was the father of the hydrogen bomb. Because he invented a trick in the American hydrogen bomb. After talking to him, I found that he was very good at the principle of symmetry.
-
-But he didn't know what it was. Gradually, I found that his principle of symmetry was in his intuition. But his intuition could not turn it into a formula.
-
-This gave me a very deep impression. In other words, learning, especially complex physics, has specific things and intuitions. These two have to complement each other.
-
-If these two are not right, you have to sit down and think carefully. Why is your original intuition wrong? When you think about this clearly, you turn what you infer into your new intuition. Then you are one step closer.
-
-This is a very important way to learn. If you can't figure it out, you can't just let it go. This won't work.
-
-Because next time you have a similar situation, you won't go back on your words. The uniform circular motion, or acceleration motion, is actually very simple. Why? Because the magnitude of this acceleration... We have to prove this.
-
-I'll write down the formula first. Magnitude is V squared over R. R is its radius, V is its velocity. Direction, towards center.
-
-This is called centripetal. Centripetal acceleration. Centripetal is centripetal.
-
-Centrifugal is centrifugal. There is a term called centrifugal force. Centrifugal force... You'd better forget this term.
-
-Its acceleration is centripetal. This is centripetal. Centripetal acceleration.
-
-Centrifugal force. We have to prove this formula. At this point, it has a velocity like this.
-
-It's its tangent. At this point, it's still the same. The length of the velocity vector is the same.
-
-But it has changed direction. For example, this is V prime. V prime is the V after this.
-
-So, what is acceleration? It's delta V. We have to calculate acceleration. It's delta V over delta t. It's the average acceleration. Then you have to draw a... This is V. This is V prime.
-
-This is delta V. So, average acceleration is equal to V prime minus V divided by delta t. V prime minus V is a small... Let me draw it bigger. This is V. This is V prime. This is delta V. This is theta.
-
-Or delta theta. These two are perpendicular to each other. So, this is also delta theta.
-
-What is delta theta? Its velocity is V. Its radius is r. So, V over r is the angular velocity. This angular velocity is used for radii.
-
-(该文件长度超过30分钟。 在TurboScribe.ai点击升级到无限，以转录长达10小时的文件。)
-
-
-(转录由TurboScribe.ai完成。升级到无限以移除此消息。)
-
-So this is delta theta. So our average velocity, our average acceleration is equal to v prime minus v divided by delta theta times r. v prime minus v is a vector. This vector is a triangle. 
-
-When this triangle collapses into a line, where is the direction of delta v? Of course it is perpendicular to v. So the first statement is, as delta t goes to zero, the triangle, this triangle, collapses. The delta v direction has a direction perpendicular to v, i.e. centripetal. This is the first statement about its direction.
-
-The second statement is about its size. What is the size? What is the magnitude of v prime minus v? What is the length of delta v? What is the length of delta v? Of course you draw a line here. This is an equilateral triangle, so it is equal to half of two times.
-
-What is half? It is v times sine of delta theta over two. Do you agree or not? Do you agree or not? This is two equilateral triangles. Each equilateral triangle has a length of two times v times sine of this angle.
-
-The magnitude of the average velocity is equal to v over r delta theta times two times v times sine of delta theta over two. This is equal to v squared over r times two times sine of delta theta over two divided by delta theta. I write delta theta over two like this.
-
-This quantity, sine of delta theta over two divided by delta theta over two. When delta theta becomes zero, it becomes one. So this becomes v squared over r. Here we use a formula.
-
-The formula is sine of an angle phi divided by phi to approach one. We use this formula. If I don't make phi small, there is a more accurate formula.
-
-Who knows this formula? Who knows what sine of phi is? Raise your hand if you know. What is it? Phi minus phi cubed divided by three factorial plus phi five times divided by five factorial. It is also in the appendix.
-
-If you accept this formula, Newton would know. In fact, Newton knew it before. China has never developed a formula like this.
-
-It has a close relationship with modern science that China has never developed. But if you accept this formula, when you divide this by phi, both sides are divided by phi, the first term is one. The rest is at least phi squared.
-
-So when phi is very small, it is gone. So it becomes one. These two are very important formulas.
-
-Okay, do we have a proof now? Let's think about what's going on. When something is doing a circle, the meaning of acceleration is how does the velocity change. The velocity now is in the tangent direction.
-
-Later, the direction of the tangent is slightly inward. So there is a change in the middle. The direction of that change is positive in the end.
-
-And its magnitude needs to go through this calculation. This calculation is very simple. This formula is very important.
-
-As I said before, is there any problem with the circular motion? If it is a non-uniform motion, what will happen? If it moves faster and faster, you can imagine that it will happen. In addition to an acceleration in the direction of the tangent, there is also an acceleration in the direction of the tangent. The reason why there is no acceleration in the direction of the tangent is because its length is not increasing.
+there is no acceleration in the direction of the tangent is because its length is not increasing.
 
 Let's change that a little bit. which Newton realized. So Newton studied how Earth goes around the Sun.
 
